--- a/plugin.xml
+++ b/plugin.xml
@@ -22,7 +22,7 @@
       </feature>
     </config-file>
 
-    <source-file src="src/android/openfb.java" target-dir="src/com/example/plugin/"/>
+    <source-file src="src/android/Hello.java" target-dir="src/com/example/plugin/"/>
   </platform>
 
   <platform name="ios">
