--- a/plugin.xml
+++ b/plugin.xml
@@ -9,9 +9,7 @@
     <engine name="cordova" version=">=3.4.0"/>
   </engines>
 
-<asset src="www/openfb.js" target="js/openfb.js"/>
-
-  <js-module src="www/openfb.js" name="openfb">
+  <js-module src="openfb.js" name="openfb">
     <clobbers target="openfb" />
 </js-module>
 
