--- a/plugin.xml
+++ b/plugin.xml
@@ -16,7 +16,7 @@
   <platform name="android">
     <config-file target="res/xml/config.xml" parent="/*">
       <feature name="openfb">
-        <param name="android-package" value="com.openfb"/>
+        <param name="android-package" value="com.openfb.openfb"/>
       </feature>
     </config-file>
 
